# petprojfastapi

./: .gitignore  LICENSE
backend/: alembic.ini  main.py  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  settings.py  tags_metadata.py
backend/app/db/: db_session.py
backend/app/db/models/: base.py  metadata.py  products.py  sellers.py  users.py
backend/app/models/: base.py
backend/migrations/: env.py
frontend/: package-lock.json
frontend/src/: main.js
