[tool.poetry]
name = "petproj"
version = "0.1.0"
description = ""
authors = ["Александр <a.borisov@btc-s.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.7"}
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
alembic = "^1.14.1"
loguru = "^0.7.3"
pytest = "^8.3.4"
sqlalchemy-imageattach = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
